Updated the site url and warning alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,7 @@
   font-size: 1.2rem;
   width: 54.4rem;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 @media screen and (max-width: 1024px) and (orientation: portrait) {
